--- a/style.css
+++ b/style.css
@@ -77,7 +77,7 @@
           flex-direction: column; } }
       .products__header__section .header__body .header__menu .header__list .header__link {
         color: #fff;
-        font-size: 12px;
+        font-size: 15px;
         font-weight: 450;
         max-width: 100%; }
         @media (max-width: 990px) {
@@ -309,7 +309,7 @@
       background-position: -5px -2px; } }
   @media (max-width: 462px) {
     .pa__navigation {
-      background-position: -7px 1px; } }
+      background-position: -7px 0px; } }
   .pa__navigation .flex {
     display: flex;
     flex-direction: column;
@@ -452,6 +452,10 @@
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap; }
+  @media (max-width: 690px) {
+    .contacts__page .leaderships__container .open__container {
+      flex-direction: column;
+      align-items: center; } }
   .contacts__page .leaderships__container .open__container .card__open {
     display: flex;
     flex-direction: column;
@@ -464,6 +468,10 @@
     .contacts__page .leaderships__container .open__container .card__open:hover {
       top: -5px;
       transition: 200ms ease 0s; }
+    @media (max-width: 690px) {
+      .contacts__page .leaderships__container .open__container .card__open {
+        width: 70%;
+        text-align: center; } }
     .contacts__page .leaderships__container .open__container .card__open .office {
       font-size: 16px;
       color: grey; }
@@ -588,7 +596,7 @@ a {
           flex-direction: column; } }
       .main__page .header__section .header__body .header__menu .header__list .header__link {
         color: #fff;
-        font-size: 12px;
+        font-size: 15px;
         font-weight: 450;
         max-width: 100%; }
         @media (max-width: 990px) {
