--- a/style.css
+++ b/style.css
@@ -489,6 +489,21 @@
   100% {
     opacity: 1; } }
 
+.news__section .news__flex__container {
+  display: flex; }
+  .news__section .news__flex__container .card__news {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center; }
+    .news__section .news__flex__container .card__news .news__img img {
+      width: 250px;
+      border-radius: 8%; }
+    .news__section .news__flex__container .card__news .news__desc {
+      font-size: 20px;
+      font-weight: 400;
+      color: #575757;
+      width: 60%; }
+
 *,
 *:before,
 *:after {
