--- a/style.css
+++ b/style.css
@@ -489,9 +489,9 @@
             opacity: 0;
             display: flex;
             flex-direction: column;
-            justify-content: space-between;
+            justify-content: flex-start;
             color: #8e0038;
-            font-size: 16px;
+            font-size: 14px;
             font-family: 'Mukta', sans-serif;
             margin-left: 10px;
             width: 100%;
