--- a/style.css
+++ b/style.css
@@ -1,21 +1,17 @@
 /*!************************************************************************************************************!*\
   !*** css ../node_modules/css-loader/dist/cjs.js!../node_modules/sass-loader/dist/cjs.js!./scss/style.scss ***!
   \************************************************************************************************************/
-@import url(https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap);
+@import url(https://fonts.googleapis.com/css2?family=Karla:wght@200&display=swap);
 /*!****************************************************************************************************************!*\
   !*** css ../node_modules/css-loader/dist/cjs.js!../node_modules/sass-loader/dist/cjs.js!./scss/style.scss (1) ***!
   \****************************************************************************************************************/
-@import url(https://fonts.googleapis.com/css2?family=Mukta&display=swap);
+@import url(https://fonts.googleapis.com/css2?family=Libre+Baskerville&display=swap);
 /*!****************************************************************************************************************!*\
   !*** css ../node_modules/css-loader/dist/cjs.js!../node_modules/sass-loader/dist/cjs.js!./scss/style.scss (2) ***!
   \****************************************************************************************************************/
-@import url(https://fonts.googleapis.com/css2?family=Karla:wght@200&display=swap);
+@import url(https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap);
 /*!****************************************************************************************************************!*\
   !*** css ../node_modules/css-loader/dist/cjs.js!../node_modules/sass-loader/dist/cjs.js!./scss/style.scss (3) ***!
-  \****************************************************************************************************************/
-@import url(https://fonts.googleapis.com/css2?family=Libre+Baskerville&display=swap);
-/*!****************************************************************************************************************!*\
-  !*** css ../node_modules/css-loader/dist/cjs.js!../node_modules/sass-loader/dist/cjs.js!./scss/style.scss (4) ***!
   \****************************************************************************************************************/
 .container2 {
   max-width: 1020px;
@@ -378,7 +374,6 @@
           max-width: 100%; } }
       .pa__products .products .product .product__info .product__name {
         font-size: 32px;
-        font-family: 'Dancing Script', cursive;
         margin-top: 0px; }
       .pa__products .products .product .product__info .product__description {
         display: flex;
@@ -388,7 +383,6 @@
           position: relative;
           color: #8e0038;
           font-size: 20px;
-          font-family: 'Dancing Script', cursive;
           height: 156px; }
         .pa__products .products .product .product__info .product__description .hideArticleAnimation {
           animation-name: hideArticle;
@@ -417,13 +411,11 @@
             .pa__products .products .product .product__info .product__description .more__information .more__information__first__container .energy__value {
               text-align: center;
               color: #8e0038;
-              font-size: 16px;
-              font-family: 'Mukta', sans-serif; }
+              font-size: 16px; }
             .pa__products .products .product .product__info .product__description .more__information .more__information__first__container .caloric__content {
               text-align: center;
               color: #8e0038;
-              font-size: 16px;
-              font-family: 'Mukta', sans-serif; }
+              font-size: 16px; }
             .pa__products .products .product .product__info .product__description .more__information .more__information__first__container .product__diagram {
               display: flex;
               align-items: center;
@@ -449,7 +441,6 @@
                   justify-content: center;
                   align-items: center;
                   font-weight: 700;
-                  font-family: 'Mukta', sans-serif;
                   font-size: 10px;
                   color: #fff;
                   text-shadow: 0 0 5px black;
@@ -478,8 +469,7 @@
                 .pa__products .products .product .product__info .product__description .more__information .more__information__first__container .product__diagram .dig .fats,
                 .pa__products .products .product .product__info .product__description .more__information .more__information__first__container .product__diagram .dig .carbohydrates {
                   color: #8e0038;
-                  font-size: 16px;
-                  font-family: 'Mukta', sans-serif; }
+                  font-size: 16px; }
                   @media (max-width: 1402px) {
                     .pa__products .products .product .product__info .product__description .more__information .more__information__first__container .product__diagram .dig .proteins,
                     .pa__products .products .product .product__info .product__description .more__information .more__information__first__container .product__diagram .dig .fats,
@@ -492,7 +482,6 @@
             justify-content: flex-start;
             color: #8e0038;
             font-size: 14px;
-            font-family: 'Mukta', sans-serif;
             margin-left: 10px;
             width: 100%;
             display: none; }
@@ -690,7 +679,8 @@ html,
 body {
   height: 100%;
   width: 100%;
-  scroll-behavior: smooth; }
+  scroll-behavior: smooth;
+  font-family: 'Open Sans', sans-serif; }
   html .toast,
   body .toast {
     border-radius: 3%;
