--- a/style.css
+++ b/style.css
@@ -659,7 +659,8 @@
     opacity: 1; } }
 
 .news__section .news__flex__container {
-  display: flex; }
+  display: flex;
+  flex-direction: column; }
   .news__section .news__flex__container .card__news {
     display: flex;
     justify-content: space-evenly;
@@ -668,7 +669,7 @@
       .news__section .news__flex__container .card__news {
         flex-direction: column; } }
     .news__section .news__flex__container .card__news .news__img img {
-      width: 250px;
+      width: 300px;
       border-radius: 8%; }
       @media (max-width: 990px) {
         .news__section .news__flex__container .card__news .news__img img {
@@ -1190,17 +1191,78 @@ body {
     .main__page .pa__7 .pa__partners .partners .partner {
       max-width: 160px; }
 
-.main__page .pa__8 .swiper__news .swiper-wrapper .swiper-slide {
+.main__page .pa__8 .news__container {
   display: flex;
-  justify-content: center; }
-  .main__page .pa__8 .swiper__news .swiper-wrapper .swiper-slide .card {
-    max-width: 20%; }
-    @media (max-width: 990px) {
-      .main__page .pa__8 .swiper__news .swiper-wrapper .swiper-slide .card {
-        max-width: 40%; } }
-    @media (max-width: 600px) {
-      .main__page .pa__8 .swiper__news .swiper-wrapper .swiper-slide .card {
-        max-width: 100%; } }
+  justify-content: space-evenly; }
+  @media (max-width: 600px) {
+    .main__page .pa__8 .news__container {
+      flex-direction: column;
+      align-items: center; } }
+  .main__page .pa__8 .news__container .card__news {
+    position: relative;
+    width: 250px;
+    height: 250px;
+    border-radius: 20px;
+    z-index: 1;
+    overflow: hidden;
+    margin: 20px 0px; }
+    .main__page .pa__8 .news__container .card__news:nth-child(1) {
+      background: url(05aade83779b42d7b7ff.jpg) center no-repeat;
+      background-size: cover; }
+    .main__page .pa__8 .news__container .card__news:nth-child(2) {
+      background: url(29680dce994505c42f17.jpg) center no-repeat;
+      background-size: cover; }
+    .main__page .pa__8 .news__container .card__news::before, .main__page .pa__8 .news__container .card__news::after {
+      content: '';
+      position: absolute;
+      left: 0;
+      width: 100%;
+      height: calc(60% + 35px);
+      background-color: rgba(90, 90, 90, 0.836);
+      transition: transform .5s .25s ease-in;
+      z-index: -1; }
+    .main__page .pa__8 .news__container .card__news::before {
+      top: 0;
+      clip-path: polygon(0 0, 100% 0, 100% 45%, 0% 100%);
+      transform: translateY(-100%); }
+    .main__page .pa__8 .news__container .card__news::after {
+      bottom: 0;
+      clip-path: polygon(0 55%, 100% 0, 100% 100%, 0% 100%);
+      transform: translateY(100%); }
+    .main__page .pa__8 .news__container .card__news:hover:before, .main__page .pa__8 .news__container .card__news:hover:after {
+      transform: translateY(0); }
+    .main__page .pa__8 .news__container .card__news .card__news__content {
+      opacity: 0;
+      transition: opacity .25s;
+      padding: 8px;
+      width: 250px;
+      height: 250px;
+      cursor: pointer; }
+      .main__page .pa__8 .news__container .card__news .card__news__content:hover {
+        opacity: 1;
+        transition-delay: .75s; }
+      .main__page .pa__8 .news__container .card__news .card__news__content .card__news__title {
+        color: #fff;
+        font-size: 23px;
+        text-align: center;
+        font-weight: bold; }
+      .main__page .pa__8 .news__container .card__news .card__news__content .card__news__description {
+        font-size: 15px;
+        margin: 20px 0;
+        font-weight: 550;
+        color: #fff; }
+      .main__page .pa__8 .news__container .card__news .card__news__content .btn {
+        background-color: #fff;
+        color: #8e0038;
+        border: 2px solid #8e0038;
+        font-size: 12px;
+        font-weight: 600;
+        box-shadow: none;
+        align-self: center; }
+        .main__page .pa__8 .news__container .card__news .card__news__content .btn:hover {
+          background-color: #8e0038 !important;
+          color: #fff;
+          transition: 0.5s ease-in-out 0s; }
 
 .main__page .footer__section {
   background-image: url(fb7840161fe7818ba125.jpg);
