--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@
   background-position: 0px -130px;
   max-width: 100%;
   z-index: 50;
-  height: 300px; }
+  height: 400px; }
   @media screen and (min-width: 250px) and (max-width: 1275px) {
     .products__header__section {
       background-position: 0px 0px; } }
@@ -103,8 +103,6 @@
           margin-top: 20px;
           max-height: 500px;
           max-width: 250px; } }
-      .products__header__section .header__body .header__brands .second {
-        margin-left: 8px; }
       .products__header__section .header__body .header__brands img {
         max-width: 100%; }
     @media (max-width: 990px) {
@@ -555,8 +553,26 @@
     margin-bottom: 20px;
     font-size: 16px;
     font-weight: 400; }
+    .pa__history .flex p span {
+      font-weight: bold;
+      font-size: 18px; }
   .pa__history .flex .last {
     margin-bottom: 60px; }
+  .pa__history .flex .img__container {
+    display: flex;
+    align-items: center;
+    margin: 20px 0; }
+    @media (max-width: 710px) {
+      .pa__history .flex .img__container {
+        flex-direction: column; } }
+    .pa__history .flex .img__container img {
+      width: 200px;
+      margin-right: 20px;
+      border-radius: 20px; }
+      @media (max-width: 710px) {
+        .pa__history .flex .img__container img {
+          margin-right: 0;
+          margin-bottom: 20px; } }
   .pa__history .flex .btn__home {
     background-color: #fff;
     color: #8e0038;
@@ -684,6 +700,280 @@
         .news__section .news__flex__container .card__news .news__desc {
           width: 90%; } }
 
+.header {
+  background-image: url(9b20bde4fe9a7bb45309.jpg);
+  background-size: cover;
+  background-position: 0px 00px;
+  max-width: 100%;
+  z-index: 50;
+  height: 800px;
+  margin-bottom: -40px;
+  overflow: hidden;
+  box-sizing: border-box; }
+  .header .header__body {
+    min-width: 100%;
+    position: absolute;
+    z-index: 5;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around; }
+    @media (max-width: 990px) {
+      .header .header__body {
+        flex-direction: column;
+        align-items: center;
+        margin: 0;
+        padding: 0;
+        margin-top: 110px;
+        background-color: inherit !important;
+        box-shadow: none !important;
+        border-bottom: none !important; } }
+    @media (max-width: 416px) {
+      .header .header__body {
+        margin-top: 110px; } }
+    @media (max-width: 990px) {
+      .header .header__body .header__menu {
+        position: fixed;
+        max-width: 50%;
+        top: 0px;
+        left: -500px;
+        width: 100%;
+        height: 700px;
+        background-color: #2c2c2c !important;
+        opacity: 0.8;
+        transition: all 300ms ease 0s;
+        overflow: auto;
+        padding: 90px 0px 0px 0px;
+        z-index: 10;
+        box-shadow: 5px 5px 45px #000 !important;
+        justify-content: flex-start; } }
+    .header .header__body .header__menu .header__list {
+      display: flex;
+      justify-content: center;
+      line-height: 50px; }
+      @media (max-width: 990px) {
+        .header .header__body .header__menu .header__list {
+          flex-direction: column; } }
+      .header .header__body .header__menu .header__list .header__link {
+        color: #fff;
+        font-size: 15px;
+        font-weight: 450;
+        max-width: 100%; }
+        .header .header__body .header__menu .header__list .header__link:hover {
+          font-weight: bold; }
+        @media (max-width: 990px) {
+          .header .header__body .header__menu .header__list .header__link {
+            color: grey;
+            font-size: 20px;
+            border-bottom: 1px solid #b4b4b4; } }
+    @media (max-width: 990px) {
+      .header .header__body .active__menu {
+        left: 0px !important;
+        height: 100% !important; } }
+    .header .header__body .header__brands {
+      max-width: 200px;
+      height: 200px;
+      display: flex;
+      flex-direction: column;
+      justify-content: flex-start;
+      align-items: center;
+      margin-top: 60px; }
+      @media (max-width: 990px) {
+        .header .header__body .header__brands {
+          order: 2; } }
+      @media (max-width: 415px) {
+        .header .header__body .header__brands {
+          margin-top: 20px;
+          max-height: 500px;
+          max-width: 250px; } }
+      .header .header__body .header__brands img {
+        max-width: 100%; }
+    @media (max-width: 990px) {
+      .header .header__body .header__icons {
+        order: 1;
+        background-color: #2c2c2c !important;
+        opacity: 0.8;
+        box-shadow: 1px 1px 9px grey;
+        padding: 10px;
+        border-bottom: 1px solid #fff;
+        height: 65px !important;
+        max-width: 100% !important;
+        margin: 0;
+        padding-right: 35px;
+        padding-left: 35px; } }
+    .header .header__body .header__icons .header__icons__list {
+      display: flex;
+      justify-content: flex-start;
+      height: 50px;
+      align-items: center; }
+      .header .header__body .header__icons .header__icons__list .search {
+        max-width: 70px;
+        display: flex;
+        height: 50px; }
+        .header .header__body .header__icons .header__icons__list .search input {
+          color: #fff;
+          border: none;
+          font-size: 12px; }
+          .header .header__body .header__icons .header__icons__list .search input:hover {
+            border: none;
+            box-shadow: none; }
+          .header .header__body .header__icons .header__icons__list .search input:focus-visible {
+            border: none;
+            box-shadow: none; }
+        .header .header__body .header__icons .header__icons__list .search i {
+          color: #fff;
+          cursor: pointer; }
+      .header .header__body .header__icons .header__icons__list .language {
+        display: flex;
+        align-items: center; }
+        .header .header__body .header__icons .header__icons__list .language .translate {
+          width: 20px;
+          height: 15px;
+          margin-left: 10px;
+          background-color: inherit; }
+          .header .header__body .header__icons .header__icons__list .language .translate img {
+            width: 20px;
+            height: 20px;
+            cursor: pointer;
+            -webkit-filter: grayscale(100%);
+            filter: grayscale(100%); }
+        .header .header__body .header__icons .header__icons__list .language .active__flag {
+          filter: grayscale(5%) !important; }
+      .header .header__body .header__icons .header__icons__list .basket {
+        margin-left: auto; }
+        .header .header__body .header__icons .header__icons__list .basket i {
+          color: #fff;
+          cursor: pointer; }
+      .header .header__body .header__icons .header__icons__list .account {
+        margin-left: 15px; }
+        @media (max-width: 415px) {
+          .header .header__body .header__icons .header__icons__list .account {
+            margin-left: 5px; } }
+        .header .header__body .header__icons .header__icons__list .account i {
+          cursor: pointer; }
+    .header .header__body .header__icons .burger .header__burger {
+      display: none; }
+      @media (max-width: 990px) {
+        .header .header__body .header__icons .burger .header__burger {
+          margin-top: 4px;
+          margin-left: 15px;
+          display: block;
+          position: relative;
+          width: 20px;
+          height: 20px;
+          z-index: 2;
+          align-self: flex-end; } }
+  @media (max-width: 990px) and (max-width: 415px) {
+    .header .header__body .header__icons .burger .header__burger {
+      margin-left: 5px; } }
+      @media (max-width: 990px) {
+          .header .header__body .header__icons .burger .header__burger span {
+            position: absolute;
+            background-color: #fff;
+            left: 0;
+            width: 100%;
+            height: 2px;
+            top: 8px;
+            transition: all 0.3s ease 0s; }
+          .header .header__body .header__icons .burger .header__burger:before, .header .header__body .header__icons .burger .header__burger:after {
+            content: "";
+            background-color: #fff;
+            position: absolute;
+            width: 100%;
+            height: 2px;
+            left: 0;
+            transition: all 0.3s ease 0s; }
+          .header .header__body .header__icons .burger .header__burger:before {
+            top: 2px; }
+          .header .header__body .header__icons .burger .header__burger:after {
+            bottom: 4px; } }
+    .header .header__body .header__icons .burger .active:before {
+      transform: rotate(45deg);
+      top: 8px !important; }
+    .header .header__body .header__icons .burger .active::after {
+      transform: rotate(-45deg);
+      bottom: 10px !important; }
+    .header .header__body .header__icons .burger .active span {
+      transform: scale(0); }
+  .header .login__page {
+    position: relative;
+    width: 100%;
+    height: 500px;
+    padding: 250px 40px 0px 40px;
+    display: block; }
+    .header .login__page .login__page__wrapper {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 500px; }
+      .header .login__page .login__page__wrapper .login__page__description {
+        width: 40%;
+        background-color: rgba(125, 6, 50, 0.329);
+        margin-right: auto;
+        border-radius: 20px;
+        height: 100%; }
+        .header .login__page .login__page__wrapper .login__page__description .content {
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+          justify-content: flex-end;
+          height: 50%;
+          padding: 0 70px; }
+          .header .login__page .login__page__wrapper .login__page__description .content .title {
+            color: #fff; }
+          .header .login__page .login__page__wrapper .login__page__description .content .article {
+            color: #fff; }
+      .header .login__page .login__page__wrapper .login__page__form {
+        width: 60%; }
+        .header .login__page .login__page__wrapper .login__page__form .form {
+          display: flex;
+          flex-direction: column;
+          align-items: center; }
+          .header .login__page .login__page__wrapper .login__page__form .form .title {
+            margin-top: 0;
+            color: #fff; }
+          .header .login__page .login__page__wrapper .login__page__form .form .article {
+            color: #fff; }
+            .header .login__page .login__page__wrapper .login__page__form .form .article span {
+              cursor: pointer; }
+              .header .login__page .login__page__wrapper .login__page__form .form .article span:hover {
+                font-weight: bold; }
+          .header .login__page .login__page__wrapper .login__page__form .form .input-field {
+            width: 299.05px; }
+            .header .login__page .login__page__wrapper .login__page__form .form .input-field .btn__log {
+              color: #fff;
+              border-bottom-color: #fff; }
+              .header .login__page .login__page__wrapper .login__page__form .form .input-field .btn__log:hover, .header .login__page .login__page__wrapper .login__page__form .form .input-field .btn__log:focus {
+                box-shadow: none; }
+            .header .login__page .login__page__wrapper .login__page__form .form .input-field .label {
+              color: #fff; }
+          .header .login__page .login__page__wrapper .login__page__form .form .btn__submit {
+            background-color: inherit;
+            box-shadow: none; }
+      .header .login__page .login__page__wrapper .showForm {
+        opacity: 0;
+        animation: showForm .5s ease-in .5s forwards;
+        display: block; }
+
+@keyframes showForm {
+  from {
+    opacity: 0;
+    display: none; }
+  to {
+    opacity: 1;
+    display: block !important; } }
+      .header .login__page .login__page__wrapper .hideForm {
+        opacity: 1;
+        animation: hideForm 1s ease-in 0s forwards;
+        display: none; }
+
+@keyframes hideForm {
+  from {
+    opacity: 1;
+    display: block; }
+  to {
+    opacity: 0;
+    display: none; } }
+
 *,
 *:before,
 *:after {
@@ -707,13 +997,13 @@ body {
     border-radius: 3%;
     background-color: rgba(0, 0, 0, 0.452); }
 
-.products__header__section .header__body, .main__page .header__section .header__body {
+.products__header__section .header__body, .header .header__body, .main__page .header__section .header__body {
   background-color: #2c2c2c;
   border-bottom: 1px solid #fff;
   height: 50px;
   opacity: 0.8; }
 
-.products__header__section .header__body .header__menu, .products__header__section .header__body .header__icons, .main__page .header__section .header__body .header__menu, .main__page .header__section .header__body .header__icons {
+.products__header__section .header__body .header__menu, .products__header__section .header__body .header__icons, .header .header__body .header__menu, .header .header__body .header__icons, .main__page .header__section .header__body .header__menu, .main__page .header__section .header__body .header__icons {
   background-color: inherit;
   box-shadow: none;
   max-width: 350px;
@@ -743,32 +1033,29 @@ body {
   bottom: 0;
   background: #e0e0e0;
   z-index: 1001; }
-
-.preloader__row {
-  position: relative;
-  top: 50%;
-  left: 50%;
-  width: 70px;
-  height: 70px;
-  margin-top: -35px;
-  margin-left: -35px;
-  text-align: center;
-  animation: preloader-rotate 2s infinite linear; }
-
-.preloader__item {
-  position: absolute;
-  display: inline-block;
-  top: 0;
-  background-color: #8e0038;
-  border-radius: 100%;
-  width: 35px;
-  height: 35px;
-  animation: preloader-bounce 2s infinite ease-in-out; }
-
-.preloader__item:last-child {
-  top: auto;
-  bottom: 0;
-  animation-delay: -1s; }
+  .preloader .preloader__row {
+    position: relative;
+    top: 50%;
+    left: 50%;
+    width: 70px;
+    height: 70px;
+    margin-top: -35px;
+    margin-left: -35px;
+    text-align: center;
+    animation: preloader-rotate 2s infinite linear; }
+    .preloader .preloader__row .preloader__item {
+      position: absolute;
+      display: inline-block;
+      top: 0;
+      background-color: #8e0038;
+      border-radius: 100%;
+      width: 35px;
+      height: 35px;
+      animation: preloader-bounce 2s infinite ease-in-out; }
+      .preloader .preloader__row .preloader__item:last-child {
+        top: auto;
+        bottom: 0;
+        animation-delay: -1s; }
 
 @keyframes preloader-rotate {
   100% {
